# insight-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: customers.csv  marketing_spend.csv  products.csv  region_targets.csv  returns.csv  sample_sales.csv
evals/: __init__.py  questions.py  run_evals.py  scoring.py
src/insight_agent/: __init__.py  api.py  cli.py  config.py  data.py  host.py  ingest.py  llm.py  prompts.py  sql_guard.py  tools.py
src/insight_agent/mcp_server/: __init__.py  __main__.py  server.py
src/insight_agent/static/: index.html
src/insight_agent/static/assets/: index-F-GAFgcw.css  index-NtF6QSHa.js
tests/: conftest.py  test_api.py  test_cli.py  test_data.py  test_evals.py  test_host.py  test_ingest.py  test_llm.py  test_mcp_server.py  test_sql_guard.py  test_tools.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  RunCard.tsx  Sheet.tsx  Sidebar.tsx  Sql.tsx  StatsModal.tsx  ThemeToggle.tsx  api.ts  chat.ts  format.ts  main.tsx  run.ts  styles.css  suggest.ts
