[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "insight-agent"
version = "0.1.0"
description = "Agentic AI data analyst: an MCP client host driving data-analysis tools over the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Youssef Khalifa" }]
dependencies = [
    "mcp>=1.2.0",
    "openai>=1.40.0",
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pyarrow>=15.0.0",
    "matplotlib>=3.8.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[project.scripts]
insight-agent = "insight_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
insight_agent = ["py.typed", "static/*.html", "static/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# The evals package lives at the repository root and is not installed; put
# the root on sys.path so the tests import it under any pytest invocation.
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

# python_version is intentionally unset: mypy targets the interpreter it
# runs on, so dependency stubs that use syntax from that interpreter's
# release (numpy's PEP 695 type aliases, for example) always parse. The CI
# matrix runs mypy on the oldest supported Python, which is what enforces
# compatibility with it.
[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
